# address-finder

./: .gitignore  MANIFEST.in  README.md  SECURITY.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  scorecard.yml
address_finder/: __init__.py  _init_data.py  _lib_loader.py  _quantize.py  expander.py  parser.py
scripts/: build_data_packages.py  build_data_wheels.sh  build_windows.ps1  full_build_windows.py
tests/: test_api.py  test_expander.py  test_parser.py
